--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+* Fixed typo in README file and updated info (Nicolas Cavigneaux)
+
+* Made plugin load in Rails 2.x (Nicolas Cavigneaux)
+
+* Updated to slider.js as of script.aculo.us 1.8.2 (Nicolas Cavigneaux)
+
 * Updated to slider.js as of script.aculo.us 1.5 final
 
 * Updated copyright notice
