Improved slider_element method and cleaned up code

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Improved slider_element (handle Range for values option, allow to automatically add hidden fields) and cleaned up code
+
 * Fixed typo in README file and updated info (Nicolas Cavigneaux)
 
 * Made plugin load in Rails 2.x (Nicolas Cavigneaux)
